# BasicSynth

./: .gitignore  .gitmodules  LICENSE  README.md
basicSynth/: CMakeLists.txt  basicSynth.jucer
basicSynth/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
basicSynth/Builds/MacOSX/basicSynth.xcodeproj/: project.pbxproj
basicSynth/Builds/MacOSX/basicSynth.xcodeproj/project.xcworkspace/xcuserdata/leofltt.xcuserdatad/: UserInterfaceState.xcuserstate
basicSynth/Builds/MacOSX/basicSynth.xcodeproj/xcshareddata/xcschemes/: basicSynth - AU.xcscheme  basicSynth - All.xcscheme  basicSynth - VST3.xcscheme
basicSynth/Builds/MacOSX/basicSynth.xcodeproj/xcuserdata/leofltt.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
basicSynth/Builds/MacOSX/basicSynth.xcodeproj/xcuserdata/leofltt.xcuserdatad/xcschemes/: xcschememanagement.plist
basicSynth/JuceLibraryCode/: AppConfig.h  JuceHeader.h  JucePluginDefines.h
basicSynth/Source/: ADSRUI.cpp  Filter.cpp  Filter.h  FilterUI.cpp  Oscillator.cpp  Oscillator.h  OscillatorUI.cpp  OscillatorUI.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.h  m_ADSR.cpp  m_ADSR.h
basicSynth/Source/sound/: Oscillator.cpp  Oscillator.h  PolyBLEPOscillator.cpp  PolyBLEPOscillator.h  SynthSound.h  SynthVoice.h
basicSynth/Source/ui/: ADSRUI.cpp  ADSRUI.h  FilterUI.cpp  FilterUI.h  OscillatorUI.cpp  OscillatorUI.h
